[gd_scene load_steps=2 format=3 uid="uid://clevel_select_scene"]

[ext_resource type="Script" path="res://scripts/ui/level_select.gd" id="1_level_select"]

[node name="LevelSelect" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_level_select")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.05, 0.02, 0.15, 1)

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
layout_mode = 2
theme_override_constants/separation = 40

[node name="TitleLabel" type="Label" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.84, 0, 1)
theme_override_font_sizes/font_size = 96
text = "Select Level"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Spacer" type="Control" parent="CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2

[node name="LevelGrid" type="GridContainer" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/h_separation = 40
theme_override_constants/v_separation = 40
columns = 3

[node name="Level1Button" type="Button" parent="CenterContainer/VBoxContainer/LevelGrid"]
custom_minimum_size = Vector2(250, 120)
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.84, 0, 1)
theme_override_colors/font_hover_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 48
text = "Level 1"

[node name="Level2Button" type="Button" parent="CenterContainer/VBoxContainer/LevelGrid"]
custom_minimum_size = Vector2(250, 120)
layout_mode = 2
disabled = true
theme_override_colors/font_color = Color(0.5, 0.5, 0.5, 1)
theme_override_colors/font_disabled_color = Color(0.5, 0.5, 0.5, 1)
theme_override_font_sizes/font_size = 48
text = "Level 2"

[node name="Level3Button" type="Button" parent="CenterContainer/VBoxContainer/LevelGrid"]
custom_minimum_size = Vector2(250, 120)
layout_mode = 2
disabled = true
theme_override_colors/font_color = Color(0.5, 0.5, 0.5, 1)
theme_override_colors/font_disabled_color = Color(0.5, 0.5, 0.5, 1)
theme_override_font_sizes/font_size = 48
text = "Level 3"

[node name="Level4Button" type="Button" parent="CenterContainer/VBoxContainer/LevelGrid"]
custom_minimum_size = Vector2(250, 120)
layout_mode = 2
disabled = true
theme_override_colors/font_color = Color(0.5, 0.5, 0.5, 1)
theme_override_colors/font_disabled_color = Color(0.5, 0.5, 0.5, 1)
theme_override_font_sizes/font_size = 48
text = "Level 4"

[node name="Level5Button" type="Button" parent="CenterContainer/VBoxContainer/LevelGrid"]
custom_minimum_size = Vector2(250, 120)
layout_mode = 2
disabled = true
theme_override_colors/font_color = Color(0.5, 0.5, 0.5, 1)
theme_override_colors/font_disabled_color = Color(0.5, 0.5, 0.5, 1)
theme_override_font_sizes/font_size = 48
text = "Level 5"

[node name="Level6Button" type="Button" parent="CenterContainer/VBoxContainer/LevelGrid"]
custom_minimum_size = Vector2(250, 120)
layout_mode = 2
disabled = true
theme_override_colors/font_color = Color(0.5, 0.5, 0.5, 1)
theme_override_colors/font_disabled_color = Color(0.5, 0.5, 0.5, 1)
theme_override_font_sizes/font_size = 48
text = "Level 6"

[node name="Spacer2" type="Control" parent="CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2

[node name="BackButton" type="Button" parent="CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(300, 80)
layout_mode = 2
size_flags_horizontal = 4
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_hover_color = Color(1, 0.84, 0, 1)
theme_override_font_sizes/font_size = 48
text = "Back"
